--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="contact.js" defer></script>
 </head>
 <body id="pro">
-    <a href="Web-site.html"><img src="images/home-button-for-interface.png" class="Hpage4" >
+    <a href="index.html"><img src="images/home-button-for-interface.png" class="Hpage4" >
     <div class="links">
         <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
         <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
