--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     </div>
      
     <div class="home-bar">
-        <a   href="Web-site.html"><img src="images/home-button-for-interface.png" id="Hpage" >
+        <a   href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
         <a id="child-bullet" href="aboutme.html" placeholder="">About Me</a>
         <a id="child-bullet" href="skills.html" placeholder="">Skills</a>
         <a id="child-bullet" href="contact.html" placeholder="">Contact</a>
