--- a/skills.html
+++ b/skills.html
@@ -16,7 +16,7 @@
     </div>
      
     <div class="home-bar">
-        <a id="Hpage" href="Web-site.html"><img src="images/home-button-for-interface.png" id="Hpage" >
+        <a id="Hpage" href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
         <a  id="bullet-skills" href="aboutme.html" placeholder="">About Me</a>
         <a id="bullet-skills" href="projects.html" placeholder="">Projects</a>
         <a id="bullet-skills" href="contact.html" placeholder="">Contact</a>
