--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1 >Alexander La Rosa Perez</h1>
+    <br>
     <div class="links">
         <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
         <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
@@ -28,9 +29,11 @@
         </div>
         <div>
             <h2>Full-Stack Web Developer</h2>
-            <p>I'm a software engineer based in New York, NY specializing in building
-                exceptional websites, applications , everything in between. and a professional 
-                dance-instructor choreographer.
+            <br>
+            <p>A professional dancer and choreographer turned software engineer 
+                based in New York - specializing in building exceptional websites 
+                and applications to have a positive impact on the world using 
+                technology.
             </p>  
         </div>
     </div>
