--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,11 @@
     <div class="projects">
         <p id="inicio">Projects</p>
         
-        <h3 id="present">Traveling the Wordl in 80 Days</h3>
+        <h3 id="present">Traveling the wordl in 80 Days</h3>
         <div class="tr80">
             <img src="images/aeropuerto.jpeg" alt="" id="puerto">
         <p id="present1">In this game you will have the opportunity to travel and learn more about 
-            the culture and traditions of different countries. To achieve this you 
+            the culture and traditions of different countries. To achieve this, you 
             will have to make decisions and choose what things you want to know and 
             from where. Regardless of how much you learn from these countries, you 
             will earn points that you can accumulate to obtain a discount on the 
@@ -46,11 +46,12 @@
         <h3 id="present3">My Snowman</h3>
         <div class="tr80">
             <img src="images/snowman_play.webp" alt="" id="puerto1">
-            <p id="present4">This is a game players must complete the word. players have 
-                to choose one letter at a time to form the word. As game instructions 
-                he / she will have limit of attempt to discover the word; You will not 
-                be able to repeat words, whether they are correct or incorrect. This will 
-                 with language and spelling development..</p>
+            <p id="present4">This is a word playing game where players challenge their 
+                language and spelling development. The aim is to complete different 
+                words. Players have to choose one letter at a time to form the word. 
+                The player will have a limited number of attempts to discover the word. 
+                You will not be able to repeat words, whether they are correct or 
+                incorrect. </p>
             <a  href="https://github.com/alexanderl96-hub/FSW-CLI-Snowman" id="more1">See more</a>
             </br>
             <img src="images/videos/Snowman .gif" alt="" id="sn-1">
