--- a/skills.html
+++ b/skills.html
@@ -17,9 +17,9 @@
      
     <div class="home-bar">
         <a id="Hpage" href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
-        <a  id="bullet-skills" href="aboutme.html" placeholder="">About Me</a>
-        <a id="bullet-skills" href="projects.html" placeholder="">Projects</a>
-        <a id="bullet-skills" href="contact.html" placeholder="">Contact</a>
+        <a  id="bullet" href="aboutme.html" placeholder="">About Me</a>
+        <a id="bullet" href="projects.html" placeholder="">Projects</a>
+        <a id="bullet" href="contact.html" placeholder="">Contact</a>
     </div>
   
     <div  class="lastskills">
