--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Web-site.css">
     <script src="skills.js"></script>
 </head>
-<body id="cambio">
+<body >
     <div class="links">
         <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
         <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
