changes based on the feedbacks

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,16 +9,19 @@
 </head>
 <body >
     <div>
-        <a href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
-        <div class="links">
-            <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
-            <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
-            <a href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree">
-        </div>
-        <div class="home-bar">
-        <a id="bullet" href="skills.html" placeholder="">Skills</a>
-        <a id="bullet" href="projects.html" placeholder="">Projects</a>
-        <a id="bullet" href="contact.html" placeholder="">Contact</a>
+        <header>
+            <a href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" ></a>
+            <div class="links">
+                <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"></a>
+                <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two"></a>
+                <a href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree"></a>
+            </div>
+        </header>
+        
+        <div class="nav">
+            <a class="bullet" href="skills.html" placeholder="">Skills</a>
+            <a class="bullet" href="projects.html" placeholder="">Projects</a>
+            <a class="bullet" href="contact.html" placeholder="">Contact</a>
         </div>
         <p class="pdf"><a id="info" href="pdf/Alexander Resume (1).pdf">Resume </a></p>
         <p id="blind">⇣</p>
