--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,22 @@
     <script src="contact.js" defer></script>
 </head>
 <body id="pro">
+    <header>
+        <a href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" ></a>
+        <div class="links">
+            <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"></a>
+            <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two"></a>
+            <a  href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree"></a>
+        </div>
+    </header>
     
-    <div class="links">
-        <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
-        <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
-        <a  href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree">
-    </div>
-    <div class="home-bar">
-        <a href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
-        <a  id="bullet" href="aboutme.html" placeholder="">About Me</a>
-        <a id="bullet" href="skills.html" placeholder="">Skills</a>
-        <a id="bullet" href="projects.html" placeholder="">Projects</a>
+    <div class="nav">
+        <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
+        <a class="bullet" href="skills.html" placeholder="">Skills</a>
+        <a class="bullet" href="projects.html" placeholder="">Projects</a>
     </div>
     <div class="norma">
+        <!-- create a grid to the whole form section -->
         <form  id="norm" method="POST" action="https://formspree.io/f/xwkwggkp">
             <label id="form6">Contact:</label>
             <label>
