--- a/skills.html
+++ b/skills.html
@@ -9,17 +9,19 @@
     <script src="skills.js"></script>
 </head>
 <body >
-    <div class="links">
-        <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"> 
-        <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two">
-        <a id="tree" href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree">
-    </div>
-     
-    <div class="home-bar">
-        <a id="Hpage" href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" >
-        <a  id="bullet" href="aboutme.html" placeholder="">About Me</a>
-        <a id="bullet" href="projects.html" placeholder="">Projects</a>
-        <a id="bullet" href="contact.html" placeholder="">Contact</a>
+    <header>
+        <a href="index.html"><img src="images/home-button-for-interface.png" id="Hpage" ></a>
+        <div class="links">
+            <a  href="https://github.com/alexanderl96-hub"> <img src="images/images.png" class="one"></a>
+            <a  href="https://www.linkedin.com/in/alexander-la-rosa-p%C3%A9rez-2b36a085/"> <img src="images/in 2.png" class="two"></a>
+            <a id="tree" href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree"></a>
+        </div>
+    </header>
+    
+    <div class="nav">
+        <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
+        <a class="bullet" href="projects.html" placeholder="">Projects</a>
+        <a class="bullet" href="contact.html" placeholder="">Contact</a>
     </div>
   
     <div  class="lastskills">
