--- a/aboutme.html
+++ b/aboutme.html
@@ -25,11 +25,24 @@
         </div>
         <p class="pdf"><a id="info" href="pdf/Alexander Resume (1).pdf">Resume </a></p>
         <p id="blind">⇣</p>
-        <p id="resume">  From dancing and creating art, to building applications and choreographing code; I am a dancer turned software developer aspiring to have a positive impact on the world using technology.
+        <p id="resume">  From dancing and creating art, to building applications and choreographing code; 
+            I am a dancer turned software developer aspiring to have a positive impact on the world using 
+            technology.
 
-                I recently joined the <a id="pursuit" href="https://www.pursuit.org/" >Pursuit</a> core program, which is an intensive "<a id="fellow"><em>12 - month software engineering fellowship</em> </a>" , with a 9 percent acceptance rate.<br></br> As a creative and diligent tech nerd I am a firm believer in the positive power of technology. My goal is to build and create programs that bring people closer together.  As a former performing artist, I am passionate about the <a id="instagram" href="https://www.instagram.com/art_cuny/">arts</a>, music and <a id="dance" href="https://youtu.be/rY_fkUZL2qI">dance</a>. The Pursuit program has given me the chance to develop another creative outlet, and even though I spend most of my time in front of the computer these days I still perform, play drums and sing in my spare time. 
+                I recently joined the <a id="pursuit" href="https://www.pursuit.org/" >Pursuit</a> core 
+                program, which is an intensive "<a id="fellow"><em>12 - month software engineering 
+                fellowship</em> </a>" , with a 9 percent acceptance rate.<br></br> As a creative and 
+                diligent tech nerd I am a firm believer in the positive power of technology. My goal is 
+                to build and create programs that bring people closer together.  As a former performing 
+                artist, I am passionate about the <a id="instagram" href="https://www.instagram.com/art_cuny/">
+                arts</a>, music and <a id="dance" href="https://youtu.be/rY_fkUZL2qI">dance</a>. The 
+                Pursuit program has given me the chance to develop another creative outlet, and even 
+                though I spend most of my time in front of the computer these days I still perform, play 
+                drums and sing in my spare time. 
 
-                <br></br>My journey with Pursuit will end in a year from now, after which I hope to achieve my goals and to be able to give more to my community – not just as a person but also as a professional. <br></br>
+                <br></br>My journey with Pursuit will end in a year from now, after which I hope to achieve 
+                my goals and to be able to give more to my community – not just as a person but also as a
+                 professional. <br></br>
         
               
                Software Development skills: <br> <strong> • JavaScript <br> • Node.js <br> • React <br> • Express <br> • Git/GitHub <br> • PostgreSQL</strong> </p>
