--- a/contact.html
+++ b/contact.html
@@ -23,22 +23,22 @@
         <a class="bullet" href="skills.html" placeholder="">Skills</a>
         <a class="bullet" href="projects.html" placeholder="">Projects</a>
     </div>
-    <div class="norma">
+    <div>
         <!-- create a grid to the whole form section -->
         <form  id="norm" method="POST" action="https://formspree.io/f/xwkwggkp">
             <label id="form6">Contact:</label>
-            <label>
+            <label class="form1">
                 <input id="form1" type="text" name="first name" placeholder="First name" required="" >
             </label>
-        </br>
-            <label >
+         </br>
+            <label class="form2">
                 <input id="form2" type="text" name="last name" placeholder="Last name" required="">
             </label>
-        </br>
-            <label>
+         </br>
+            <label class="form3">
                 <input id="form3" type="email" name="_replyto" placeholder="E-mail" required=""> 
             </label>
-            <label>
+            <label class="form4">
                 <textarea id="form4" cols="40" rows="15" name="Message" placeholder="Message:" required=""></textarea>
             </label>
             
