--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,13 @@
             <a  href="https://twitter.com/LperezAlexander" ><img src="images/twitter.png" class="tree"></a>
         </div>
     </header>
-    
+    <!-- changes nav bar size in @screen -->
     <div class="nav">
         <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
         <a class="bullet" href="skills.html" placeholder="">Skills</a>
         <a class="bullet" href="projects.html" placeholder="">Projects</a>
     </div>
     <div>
-        <!-- create a grid to the whole form section -->
         <form  id="norm" method="POST" action="https://formspree.io/f/xwkwggkp">
             <label id="form6">Contact:</label>
             <label class="form1">
