--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
         <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
         <a class="bullet" href="skills.html" placeholder="">Skills</a>
         <a class="bullet" href="projects.html" placeholder="">Projects</a>
+        <a class="bullet" href="contact.html" placeholder="">Contact</a>
     </div>
     <div>
         <form  id="norm" method="POST" action="https://formspree.io/f/xwkwggkp">
