--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,9 @@
     <div class="nav">
         <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
         <a class="bullet" href="skills.html" placeholder="">Skills</a>
+        <a class="bullet" href="contact.html" placeholder="">Projects</a>
         <a class="bullet" href="contact.html" placeholder="">Contact</a>
     </div>
-
     
     <div class="projects">
         <p id="inicio">Projects</p>
