--- a/skills.html
+++ b/skills.html
@@ -20,6 +20,7 @@
     
     <div class="nav">
         <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
+        <a class="bullet" href="skills.html" placeholder="">Skills</a>
         <a class="bullet" href="projects.html" placeholder="">Projects</a>
         <a class="bullet" href="contact.html" placeholder="">Contact</a>
     </div>
@@ -29,7 +30,6 @@
         <form  class="roble" action="">
             <label  for="tech" class="options">Choose a Category</label>
             <select id="skills2" class="tech">
-                <option id="skills2" name="all" value="---">---</option>
                 <option id="skills2" class="all" value="all" >All</option>
                 <option id="skills2" class="all" value="front">Front end</option>
                 <option id="skills2" class="all" value="back">Back end</option>
