--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
         </header>
         
         <div class="nav">
+            <a class="bullet" href="aboutme.html" placeholder="">About Me</a>
             <a class="bullet" href="skills.html" placeholder="">Skills</a>
             <a class="bullet" href="projects.html" placeholder="">Projects</a>
             <a class="bullet" href="contact.html" placeholder="">Contact</a>
